# notetaker

./: CONTEXT.md  README.md  notetaker.bat  notetaker.sh  pyproject.toml
docs/adr/: 0001-llm-via-external-cli.md  0002-audio-local-text-remote.md  0003-batch-transcription-at-end.md  0004-level1-diarization-default.md  0005-auto-detected-devices.md
notetaker/: __init__.py  audio.py  cli.py  config.py  diarize.py  llm.py  pipeline.py  prompts.py  storage.py  transcribe.py  ui.py
