[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notetaker"
version = "0.1.0"
description = "Records meetings, transcribes locally with Whisper, and generates summaries via LLM CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Level 2 diarization (identify each speaker). Requires significant CPU.
diarization = [
    "whisperx>=3.1.1",
]
# GPU acceleration via NVIDIA (CUDA). Installs CUDA runtime libraries that
# CTranslate2/faster-whisper uses. Only makes sense on machines with NVIDIA GPU.
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9.0",
]

[project.scripts]
notetaker = "notetaker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notetaker*"]
